<resources>
    <string name="app_name">Sensors</string>
    <string name="start_btn_text">START</string>
    <string name="settings_btn_text">SETTINGS</string>
    <string name="archive_btn_text">ARCHIVE</string>
    <string name="custom_start_btn_text">CUSTOM START</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">NEXT</string>
    <string name="cancel">Cancel</string>
    <string name="select_all">SELECT ALL</string>
    <string name="start_recording">START</string>
    <string name="custom_timing">Custom Timing</string>
    <string name="start_after">Start in:</string>
    <string name="for_">Record for: </string>
    <string name="sample">Sample </string>
    <string name="every">Every</string>
    <string name="custom_sampling">Custom Sampling</string>
    <string name="recording_status">Recording Status</string>
    <string name="stop">Stop</string>
    <string name="task_completed">Task completed!</string>
    <string name="done">Done</string>
    <string name="audio">Audio</string>
    <string name="battery_level">Battery Level</string>
    <string name="wifi_access_point">wifi access point</string>
    <string name="location">Location</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="cont">Continue</string>
    <string name="optional">(Optional)</string>
    <string name="recs">Recording starts in:</string>
</resources>
