<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <android.support.design.button.MaterialButton
            style="@style/Widget.Sensors.Button"
            android:id="@+id/start_btn"
            android:layout_gravity="center_horizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:text="@string/start_btn_text"/>

        <android.support.design.button.MaterialButton
            style="@style/Widget.Sensors.Button"
            android:id="@+id/archive_btn"
            android:layout_gravity="center_horizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/archive_btn_text"/>

        <android.support.design.button.MaterialButton
            style="@style/Widget.Sensors.Button"
            android:id="@+id/settings_btn"
            android:layout_gravity="center_horizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn_text"/>

    </LinearLayout>

</ScrollView>
