<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="80">

    <ListView
        android:id="@+id/sensors_list_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="64">

    </ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16">

        <android.support.design.button.MaterialButton
            style="@style/Widget.Sensors.Button"
            android:id="@+id/sensor_cnt_next"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/next"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>

        <android.support.design.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/sensor_cnt_cancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/sensor_cnt_next"
            android:layout_toStartOf="@id/sensor_cnt_next"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/cancel"/>

        <android.support.v7.widget.AppCompatCheckBox
            style="@style/Widget.Sensors.List.Checkbox"
            android:id="@+id/sensor_cnt_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/sensor_cnt_cancel"
            android:layout_toLeftOf="@id/sensor_cnt_cancel"
            android:layout_centerVertical="true"
            android:text="@string/select_all"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

    </RelativeLayout>

</LinearLayout>